--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@saintrelion/auth-lib": "^1.1.6",
-    "@saintrelion/data-access-layer": "^2.0.8",
+    "@saintrelion/auth-lib": "^2.1.20",
+    "@saintrelion/data-access-layer": "^4.0.26",
+    "@saintrelion/routers": "^1.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
