--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@saintrelion/auth-lib": "^2.1.20",
-    "@saintrelion/data-access-layer": "^4.0.26",
-    "@saintrelion/routers": "^1.1.11",
+    "@saintrelion/auth-lib": "^3.1.2",
+    "@saintrelion/cache": "^1.0.0",
+    "@saintrelion/data-access-layer": "^4.2.16",
+    "@saintrelion/notifications": "^1.0.2",
+    "@saintrelion/routers": "^1.1.15",
+    "@saintrelion/time-functions": "^1.0.2",
+    "@saintrelion/ui": "^1.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
@@ -27,6 +34,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
+    "geolib": "^3.3.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
@@ -37,7 +46,8 @@
     "react-router-dom": "^7.7.1",
     "shadcn": "^2.10.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
