--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@saintrelion/auth-lib": "^3.1.2",
-    "@saintrelion/cache": "^1.0.0",
-    "@saintrelion/data-access-layer": "^4.2.17",
-    "@saintrelion/forms": "^1.0.6",
+    "@saintrelion/auth-lib": "^4.1.3",
+    "@saintrelion/cache": "^1.0.1",
+    "@saintrelion/data-access-layer": "^5.0.4",
+    "@saintrelion/forms": "^1.0.20",
     "@saintrelion/notifications": "^1.0.2",
-    "@saintrelion/routers": "^1.1.15",
+    "@saintrelion/routers": "^2.0.0",
     "@saintrelion/time-functions": "^1.0.2",
-    "@saintrelion/ui": "^1.0.6",
+    "@saintrelion/ui": "^1.0.7",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/leaflet": "^1.9.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
     "geolib": "^3.3.4",
